# ya-admin

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  service.rs  utils.rs
backend/src/api/: auth.rs  mod.rs  orders.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/db/entities/: mod.rs  order.rs  user.rs
backend/src/error/: mod.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/model/: mod.rs  orders.rs  users.rs
doc/: schema.sql  schema_sqlite.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/router/: index.ts
frontend/src/views/: Login.vue  Orders.vue
frontend/src/views/orders/: index.vue
