[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["cors"] }
jsonwebtoken = "8.3"
dotenv = "0.15"
chrono = "0.4"
lazy_static = "1.4"
thiserror = "1.0"
bcrypt = "0.15"
uuid = { version = "1.4", features = ["v4", "serde"] }
